# katana

./: CMakeLists.txt  Doxyfile.in
.github/workflows/: python.yaml
cmake/Modules/: KatanaBuildCommon.cmake  KatanaPythonSetupSubdirectory.cmake
config/: conanfile.py
deploy/package/: README.md  build-centos.Dockerfile  build-ubuntu.Dockerfile  make-package.py  run-centos.Dockerfile  run-ubuntu.Dockerfile
docs/cxx/: AddProperties_8cpp.html  AddProperties_8h.html  AddProperties_8h.js  AddProperties_8h_source.html  Allocators_8h.html  Allocators_8h.js  Allocators_8h_source.html  Analytics_8h.html  Analytics_8h_source.html  ArrayWrapper_8h.html  ArrayWrapper_8h_source.html  ArrowInterchange_8cpp.html  ArrowInterchange_8h.html  ArrowInterchange_8h.js  ArrowInterchange_8h_source.html  ArrowRandomAccessBuilder_8h.html  ArrowRandomAccessBuilder_8h.js  ArrowRandomAccessBuilder_8h_source.html  ArrowVisitor_8cpp.html  ArrowVisitor_8h.html  ArrowVisitor_8h.js  ArrowVisitor_8h_source.html  AsyncOpGroup_8cpp.html  AsyncOpGroup_8h.html  AsyncOpGroup_8h_source.html  AtomicHelpers_8h.html  AtomicHelpers_8h.js  AtomicHelpers_8h_source.html  AtomicWrapper_8h.html  AtomicWrapper_8h_source.html  BCEdge_8h.html  BCEdge_8h_source.html  BCNode_8h.html  BCNode_8h_source.html  Backtrace_8cpp.html  Backtrace_8cpp.js  Backtrace_8h.html  Backtrace_8h.js  Backtrace_8h_source.html  Bag_8h.html  (+2249 more)
docs/cxx/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+165 more)
docs/katana_python/: .buildinfo  genindex.html  index.html  katana.analytics.html  katana.atomic.html  katana.datastructures.html  katana.loops.html  katana.property_graph.html  katana.timer.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/katana_python/_modules/: index.html
libgalois/src/: BuildGraph.cpp  GraphMLSchema.cpp  PropertyGraph.cpp
libsupport/: CMakeLists.txt
python/katana/: _property_graph.pyx  datastructures.pxd.jinja  datastructures.pyx.jinja
scripts/: bench_python_cpp_algos.py
tools/graph-convert/: graph-convert.cpp  graph-properties-convert-main.cpp  graph-properties-convert-mongodb.cpp  graph-properties-convert-mongodb.h
(+16 files in other folders)
